<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Table Layout</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="label_name">Name:</string>
    <string name="txt_name">Enter a name</string>
    <string name="label_age">Age:</string>
    <string name="txt_age">Enter an age</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_cancel">Cancel</string>

</resources>