<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000"
    android:padding="10dp" >

    <TableRow android:padding="5dp" >

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/label_name"
            android:textColor="#ffffff" />

        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:hint="@string/txt_name" />
    </TableRow>

    <TableRow android:padding="5dp" >

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/label_age"
            android:textColor="#ffffff" />

        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:hint="@string/txt_age" />
    </TableRow>

    <TableRow android:padding="5dp" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_submit" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel" />
    </TableRow>

</TableLayout>